# daml

./: .gitignore  .pre-commit-config.yaml  COPYING-CODE  COPYING-TEXT  README.md  pyproject.toml
da/: jupyter-exercises-1.ipynb  jupyter-exercises-2.ipynb  notebook-code.ipynb  notebook-magic.ipynb  pydata-primer.ipynb
daml/: pub.py
data/: net-attack-access.labels
idx/: custom.css  index.html
joblib/: model-persistence.ipynb
matplotlib/: matplotlib-exercises.ipynb  plotting-basics.ipynb  reference.ipynb  stat-plots.ipynb
ml/: ann-architectures.ipynb  classification-vs-regression.html  classification-vs-regression.ipynb  die-hard.ipynb  imdb-project.ipynb  least-squares.ipynb  machine-learning-intro.html  machine-learning-intro.ipynb  monte-carlo.html  monte-carlo.ipynb  online-learning.html  online-learning.ipynb  project-net-attack.ipynb  real-world.html  real-world.ipynb  supervised-learning-summary.html  supervised-learning-summary.ipynb  what-next.html  what-next.ipynb
nb/: ann-architectures.ipynb  ann-neural-networks.ipynb  apx-attention.ipynb  apx-flew-over-nlp.ipynb  apx-imdb.ipynb  apx-intro-naive-bayes.ipynb  apx-introduction-city.ipynb  apx-least-squares.ipynb  apx-net-attack.ipynb  apx-q-learning.ipynb  apx-resources-city-classroom.ipynb  apx-resources-city-online.ipynb  apx-sample-bias.ipynb  apx-seaborn-exercises.ipynb  apx-seaborn-plots.ipynb  apx-spam-filter.ipynb  da-correlation.ipynb  da-die-hard.ipynb  da-distributions.ipynb  da-stats-basics.ipynb  da-stats-exercises.ipynb  da-why-python.ipynb  fe-evaluation-exercises.ipynb  fe-fallacies.ipynb  fe-full-road-trip.ipynb  fe-high-dimensions.ipynb  fe-regression.ipynb  fe-regularization.ipynb  fe-text-features.ipynb  fut-real-world.ipynb  fut-what-next.ipynb  np-array-algebra.ipynb  np-exercises.ipynb  np-numpy-basics.ipynb  np-operations.ipynb  np-random-walk.ipynb  np-randomness.ipynb  ol-ann-architectures.ipynb  ol-ann-concepts.ipynb  ol-ann-usage.ipynb  (+67 more)
numpy/: numpy-basics.ipynb  (+3 more)
(+218 files in other folders)
